# upnp-cli

./: .gitignore  ACTION_ITEMS_CHECKLIST.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  simple_api_demo.py  test_api_generation.py  test_device_fetch.py  test_upnp_cli_comprehensive.py  upnp_scan_report_20250605_143025.json
.cursor/rules/: main.mdc
demo_api/: simple_working_api.py  sonos_api_demo.py  start_api.sh
docs/: ADR.md  API_GENERATOR_GUIDE.md  ARCHITECTURE.md  ENHANCED_PROFILES_GUIDE.md  NEXT_PHASE_PLAN.md  WHAT_MISSING.md  modular_design.md  potential_pw_change.md
enhanced_profiles/: enhanced_profiles_20250605_200735.json
enhanced_profiles/enhanced_profiles_20250605_200735_individual/: Sonos,_Inc._Sonos_Port_147actions.json  Sony_Corporation_XBR-55X700D_1actions.json  eero_inc._eero_6+_3actions.json
profiles/: PROFILES_EXPLANATION.md  PROFILE_NOTES.md  profiles.json
routines/: __init__.py  base_routine.py  fart_loop.py
routines/examples/: template.py
tests/: __init__.py  test_cache.py  test_config.py  test_discovery.py  test_logging_utils.py  test_media_control.py  test_profiles.py  test_soap_client.py  test_ssl_rtsp_scan.py  test_utils.py
upnp_cli/: __init__.py  cache.py  cli.py  config.py  discovery.py  http_server.py  logging_utils.py  media_control.py  profiles.py  soap_client.py  ssl_rtsp_scan.py  utils.py
upnp_cli/api_generator/: profile_to_api.py
upnp_cli/cli/: __init__.py  config_manager.py  output.py  utils.py  ux_improvements.py
upnp_cli/cli/commands/: __init__.py  auto_profile.py  cache_server.py  discovery.py  enhanced_interactive.py  enhanced_profiles.py  interactive_control.py  mass_operations.py  media_control.py  profile_based_interactive.py  routine_commands.py  scpd_analysis.py  security_scanning.py
upnp_cli/profile_generation/: __init__.py  enhanced_profile_generator.py  scpd_parser.py
upnp_cli/routines/: profile_aware_routines.py
